// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CieIdWizard Should match the snapshot 1`] = `
[
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      [
        {
          "paddingBottom": NaN,
          "paddingHorizontal": 0,
        },
        {},
      ]
    }
    decelerationRate="normal"
    onScroll={[Function]}
    scrollEventThrottle={8}
    snapToEnd={false}
    snapToOffsets={
      [
        0,
        0,
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 8,
            }
          }
        >
          <Text
            accessibilityLabel="Hai l'app CieID?"
            accessibilityRole="header"
            allowFontScaling={true}
            dynamicTypeRamp="title1"
            maxFontSizeMultiplier={1.5}
            style={
              [
                {},
                {
                  "color": "#0E0F13",
                  "fontFamily": "Titillio",
                  "fontSize": 26,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "lineHeight": 34,
                },
              ]
            }
          >
            Hai l'app CieID?
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "height": 16,
            }
          }
        />
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="body"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
              },
            ]
          }
        >
          Se hai l’app CieID sul tuo dispositivo, inserisci il codice che hai impostato per l’app CieID o usa il tuo volto o l’impronta.

Per entrare su IO senza usare fisicamente la Carta di Identità Elettronica, devi prima abilitare l’accesso con livello 1 e 2 nell’app CieID.
        </Text>
      </View>
      <View
        style={
          {
            "height": 16,
          }
        }
      />
      <View
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "height": 12,
            }
          }
        />
        <View
          accessibilityLabel="Cos'è CieID?"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 14,
              "left": 24,
              "right": 24,
              "top": 14,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="cie-id-wizard-open-cie-id-link"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "elevation": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "textAlignVertical": "center",
                },
                false,
                {},
                {
                  "paddingHorizontal": 0,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0B3EE3",
                  "borderRadius": 8,
                  "borderWidth": 0,
                  "height": undefined,
                },
                {},
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "columnGap": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                importantForAccessibility="no-hide-descendants"
                maxFontSizeMultiplier={1.5}
                numberOfLines={1}
                style={
                  [
                    {},
                    {
                      "color": "#0E0F13",
                      "fontFamily": "Titillio",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    [
                      {
                        "textAlign": "auto",
                      },
                      {
                        "color": "#0B3EE3",
                      },
                      {
                        "color": undefined,
                      },
                    ],
                  ]
                }
              >
                Cos'è CieID?
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "bottom": 0,
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": "100%",
        },
        {
          "height": NaN,
          "paddingBottom": undefined,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          false,
        ]
      }
    >
      <View
        style={
          [
            {
              "opacity": undefined,
            },
            false,
          ]
        }
      >
        <BVLinearGradient
          colors={
            [
              16777215,
              218103807,
              419430399,
              620756991,
              822083583,
              1040187391,
              1241513983,
              1442840575,
              1644167167,
              1845493759,
              2046820351,
              2264924159,
              2466250751,
              2667577343,
              2868903935,
              3070230527,
              3271557119,
              3489660927,
              3690987519,
              3892314111,
              4093640703,
              4294967295,
            ]
          }
          endPoint={
            {
              "x": 0.5,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.047619047619047616,
              0.09523809523809523,
              0.14285714285714285,
              0.19047619047619047,
              0.23809523809523808,
              0.2857142857142857,
              0.3333333333333333,
              0.38095238095238093,
              0.42857142857142855,
              0.47619047619047616,
              0.5238095238095237,
              0.5714285714285714,
              0.6190476190476191,
              0.6666666666666666,
              0.7142857142857142,
              0.7619047619047619,
              0.8095238095238095,
              0.8571428571428571,
              0.9047619047619047,
              0.9523809523809523,
              1,
            ]
          }
          startPoint={
            {
              "x": 0.5,
              "y": 0,
            }
          }
          style={
            {
              "height": NaN,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "bottom": 0,
            "height": NaN,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        {
          "flexShrink": 0,
          "paddingHorizontal": 24,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Sì, entra con CieID"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "stretch",
            "flexShrink": 0,
          }
        }
        testID="cie-id-wizard-login-with-cie-id"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderCurve": "continuous",
                "elevation": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "overflow": "hidden",
                "textAlignVertical": "center",
              },
              false,
              {
                "backgroundColor": undefined,
              },
              {
                "paddingHorizontal": 16,
              },
              {
                "backgroundColor": "#0B3EE3",
                "borderColor": "#FFFFFF",
                "borderRadius": 8,
                "borderWidth": 0,
                "height": 48,
              },
              {},
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "columnGap": 8,
                },
                false,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              accessible={false}
              allowFontScaling={true}
              ellipsizeMode="tail"
              importantForAccessibility="no-hide-descendants"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": undefined,
                  },
                  [
                    {
                      "textAlign": "auto",
                    },
                    {
                      "color": "#FFFFFF",
                    },
                    {
                      "color": undefined,
                    },
                  ],
                ]
              }
            >
              Sì, entra con CieID
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignSelf": "center",
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "height": 16,
            }
          }
        />
        <View
          accessibilityLabel="Non ho CieID"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 14,
              "left": 24,
              "right": 24,
              "top": 14,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="cie-id-wizard-navigate-to-cie-pin-wizard"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "elevation": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "textAlignVertical": "center",
                },
                false,
                {},
                {
                  "paddingHorizontal": 0,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0B3EE3",
                  "borderRadius": 8,
                  "borderWidth": 0,
                  "height": undefined,
                },
                {},
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "columnGap": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                importantForAccessibility="no-hide-descendants"
                maxFontSizeMultiplier={1.5}
                numberOfLines={1}
                style={
                  [
                    {},
                    {
                      "color": "#0E0F13",
                      "fontFamily": "Titillio",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    [
                      {
                        "textAlign": "auto",
                      },
                      {
                        "color": "#0B3EE3",
                      },
                      {
                        "color": undefined,
                      },
                    ],
                  ]
                }
              >
                Non ho CieID
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`CiePinWizard Should match the snapshot 1`] = `
[
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      [
        {
          "paddingBottom": NaN,
          "paddingHorizontal": 0,
        },
        {},
      ]
    }
    decelerationRate="normal"
    onScroll={[Function]}
    scrollEventThrottle={8}
    snapToEnd={false}
    snapToOffsets={
      [
        0,
        0,
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 8,
            }
          }
        >
          <Text
            accessibilityLabel="Hai la Carta di Identità Elettronica e il PIN?"
            accessibilityRole="header"
            allowFontScaling={true}
            dynamicTypeRamp="title1"
            maxFontSizeMultiplier={1.5}
            style={
              [
                {},
                {
                  "color": "#0E0F13",
                  "fontFamily": "Titillio",
                  "fontSize": 26,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "lineHeight": 34,
                },
              ]
            }
          >
            Hai la Carta di Identità Elettronica e il PIN?
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "height": 16,
            }
          }
        />
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="body"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
              },
            ]
          }
        >
          Se hai la tua Carta di Identità Elettronica a portata di mano, puoi accedere a IO inserendo il PIN della carta e avvicinandola al dispositivo per consentire la lettura dei dati.
        </Text>
      </View>
      <View
        style={
          {
            "height": 16,
          }
        }
      />
      <View
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "height": 12,
            }
          }
        />
        <View
          accessibilityLabel="Dove trovo il PIN della CIE?"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 14,
              "left": 24,
              "right": 24,
              "top": 14,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="cie-pin-wizard-open-bottom-sheet"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "elevation": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "textAlignVertical": "center",
                },
                false,
                {},
                {
                  "paddingHorizontal": 0,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0B3EE3",
                  "borderRadius": 8,
                  "borderWidth": 0,
                  "height": undefined,
                },
                {},
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "columnGap": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                importantForAccessibility="no-hide-descendants"
                maxFontSizeMultiplier={1.5}
                numberOfLines={1}
                style={
                  [
                    {},
                    {
                      "color": "#0E0F13",
                      "fontFamily": "Titillio",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    [
                      {
                        "textAlign": "auto",
                      },
                      {
                        "color": "#0B3EE3",
                      },
                      {
                        "color": undefined,
                      },
                    ],
                  ]
                }
              >
                Dove trovo il PIN della CIE?
              </Text>
            </View>
          </View>
        </View>
      </View>
      <RCTScrollView
        overScrollMode="never"
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View>
          <View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="body"
              maxFontSizeMultiplier={1.5}
              style={
                [
                  {},
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                ]
              }
            >
              Il codice PIN è composto da 8 cifre ed è diviso in due parti:
            </Text>
            <View>
              <View
                style={
                  {
                    "height": 8,
                  }
                }
              />
              <View
                style={
                  {
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    {
                      "width": 12,
                    }
                  }
                />
                <View
                  accessibilityRole="list"
                  accessible={true}
                  style={
                    {
                      "flex": 1,
                      "flexGrow": 1,
                    }
                  }
                >
                  <View
                    accessible={true}
                    style={
                      {
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      dynamicTypeRamp="body"
                      maxFontSizeMultiplier={1.5}
                      style={
                        [
                          {},
                          {
                            "color": "#555C70",
                            "fontFamily": "Titillio",
                            "fontSize": 16,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <View
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <View
                      accessible={false}
                      style={
                        {
                          "flex": 1,
                          "flexShrink": 1,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={true}
                        dynamicTypeRamp="body"
                        maxFontSizeMultiplier={1.5}
                        style={
                          [
                            {},
                            {
                              "color": "#555C70",
                              "fontFamily": "Titillio",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "fontWeight": "400",
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        le prime 4 cifre le hai ricevute all’anagrafe;
                      </Text>
                    </View>
                  </View>
                  <View
                    accessible={true}
                    style={
                      {
                        "flexDirection": "row",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={true}
                      dynamicTypeRamp="body"
                      maxFontSizeMultiplier={1.5}
                      style={
                        [
                          {},
                          {
                            "color": "#555C70",
                            "fontFamily": "Titillio",
                            "fontSize": 16,
                            "fontStyle": "normal",
                            "fontWeight": "400",
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      •
                    </Text>
                    <View
                      style={
                        {
                          "width": 8,
                        }
                      }
                    />
                    <View
                      accessible={false}
                      style={
                        {
                          "flex": 1,
                          "flexShrink": 1,
                        }
                      }
                    >
                      <Text
                        allowFontScaling={true}
                        dynamicTypeRamp="body"
                        maxFontSizeMultiplier={1.5}
                        style={
                          [
                            {},
                            {
                              "color": "#555C70",
                              "fontFamily": "Titillio",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "fontWeight": "400",
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        le ultime 4 cifre le hai ricevute a casa con la CIE.
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <View
                style={
                  {
                    "height": 8,
                  }
                }
              />
            </View>
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="body"
              maxFontSizeMultiplier={1.5}
              style={
                [
                  {},
                  {
                    "color": "#555C70",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                ]
              }
            >
              Mettile insieme e inseriscile in quest’ordine.
            </Text>
          </View>
          <View
            style={
              {
                "height": 24,
              }
            }
          />
          <View
            accessibilityLabel="Hai dimenticato il PIN?"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": false,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            hitSlop={
              {
                "bottom": 14,
                "left": 24,
                "right": 24,
                "top": 14,
              }
            }
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "flex-start",
              }
            }
            testID="cie-pin-wizard-open-cie-pin-link"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderCurve": "continuous",
                    "elevation": 0,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "textAlignVertical": "center",
                  },
                  false,
                  {},
                  {
                    "paddingHorizontal": 0,
                  },
                  {
                    "backgroundColor": "transparent",
                    "borderColor": "#0B3EE3",
                    "borderRadius": 8,
                    "borderWidth": 0,
                    "height": undefined,
                  },
                  {},
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    {
                      "columnGap": 8,
                    },
                    false,
                  ]
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  accessible={false}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  importantForAccessibility="no-hide-descendants"
                  maxFontSizeMultiplier={1.5}
                  numberOfLines={1}
                  style={
                    [
                      {},
                      {
                        "color": "#0E0F13",
                        "fontFamily": "Titillio",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                      [
                        {
                          "textAlign": "auto",
                        },
                        {
                          "color": "#0B3EE3",
                        },
                        {
                          "color": undefined,
                        },
                      ],
                    ]
                  }
                >
                  Hai dimenticato il PIN?
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "height": undefined,
              }
            }
          />
        </View>
      </RCTScrollView>
    </View>
  </RCTScrollView>,
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "bottom": 0,
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": "100%",
        },
        {
          "height": NaN,
          "paddingBottom": undefined,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          false,
        ]
      }
    >
      <View
        style={
          [
            {
              "opacity": undefined,
            },
            false,
          ]
        }
      >
        <BVLinearGradient
          colors={
            [
              16777215,
              218103807,
              419430399,
              620756991,
              822083583,
              1040187391,
              1241513983,
              1442840575,
              1644167167,
              1845493759,
              2046820351,
              2264924159,
              2466250751,
              2667577343,
              2868903935,
              3070230527,
              3271557119,
              3489660927,
              3690987519,
              3892314111,
              4093640703,
              4294967295,
            ]
          }
          endPoint={
            {
              "x": 0.5,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.047619047619047616,
              0.09523809523809523,
              0.14285714285714285,
              0.19047619047619047,
              0.23809523809523808,
              0.2857142857142857,
              0.3333333333333333,
              0.38095238095238093,
              0.42857142857142855,
              0.47619047619047616,
              0.5238095238095237,
              0.5714285714285714,
              0.6190476190476191,
              0.6666666666666666,
              0.7142857142857142,
              0.7619047619047619,
              0.8095238095238095,
              0.8571428571428571,
              0.9047619047619047,
              0.9523809523809523,
              1,
            ]
          }
          startPoint={
            {
              "x": 0.5,
              "y": 0,
            }
          }
          style={
            {
              "height": NaN,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "bottom": 0,
            "height": NaN,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        {
          "flexShrink": 0,
          "paddingHorizontal": 24,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Sì, entra con CIE + PIN"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "stretch",
            "flexShrink": 0,
          }
        }
        testID="cie-pin-wizard-navigate-to-cie-pin-screen"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderCurve": "continuous",
                "elevation": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "overflow": "hidden",
                "textAlignVertical": "center",
              },
              false,
              {
                "backgroundColor": undefined,
              },
              {
                "paddingHorizontal": 16,
              },
              {
                "backgroundColor": "#0B3EE3",
                "borderColor": "#FFFFFF",
                "borderRadius": 8,
                "borderWidth": 0,
                "height": 48,
              },
              {},
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "columnGap": 8,
                },
                false,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              accessible={false}
              allowFontScaling={true}
              ellipsizeMode="tail"
              importantForAccessibility="no-hide-descendants"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": undefined,
                  },
                  [
                    {
                      "textAlign": "auto",
                    },
                    {
                      "color": "#FFFFFF",
                    },
                    {
                      "color": undefined,
                    },
                  ],
                ]
              }
            >
              Sì, entra con CIE + PIN
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignSelf": "center",
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "height": 16,
            }
          }
        />
        <View
          accessibilityLabel="Non ho la CIE e il PIN"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 14,
              "left": 24,
              "right": 24,
              "top": 14,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="cie-pin-wizard-navigate-to-spid-wizard"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "elevation": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "textAlignVertical": "center",
                },
                false,
                {},
                {
                  "paddingHorizontal": 0,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0B3EE3",
                  "borderRadius": 8,
                  "borderWidth": 0,
                  "height": undefined,
                },
                {},
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "columnGap": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                importantForAccessibility="no-hide-descendants"
                maxFontSizeMultiplier={1.5}
                numberOfLines={1}
                style={
                  [
                    {},
                    {
                      "color": "#0E0F13",
                      "fontFamily": "Titillio",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    [
                      {
                        "textAlign": "auto",
                      },
                      {
                        "color": "#0B3EE3",
                      },
                      {
                        "color": undefined,
                      },
                    ],
                  ]
                }
              >
                Non ho la CIE e il PIN
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`IDActivationWizard Should match the snapshot 1`] = `
[
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      [
        {
          "paddingBottom": NaN,
          "paddingHorizontal": 0,
        },
        {},
      ]
    }
    decelerationRate="normal"
    onScroll={[Function]}
    scrollEventThrottle={8}
    snapToEnd={false}
    snapToOffsets={
      [
        0,
        0,
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 8,
            }
          }
        >
          <Text
            accessibilityLabel="Attiva la tua identità digitale!"
            accessibilityRole="header"
            allowFontScaling={true}
            dynamicTypeRamp="title1"
            maxFontSizeMultiplier={1.5}
            style={
              [
                {},
                {
                  "color": "#0E0F13",
                  "fontFamily": "Titillio",
                  "fontSize": 26,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "lineHeight": 34,
                },
              ]
            }
          >
            Attiva la tua identità digitale!
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "height": 16,
            }
          }
        />
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="body"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
              },
            ]
          }
        >
          Devi avere un’identità digitale SPID o CIE (Carta di Identità Elettronica) attiva per usare IO.
        </Text>
      </View>
      <View
        style={
          {
            "height": 16,
          }
        }
      />
      <View
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "height": 12,
            }
          }
        />
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#0E0F13",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          Come attivarla
        </Text>
        <View
          style={
            {
              "height": 12,
            }
          }
        />
        <View
          accessibilityLabel="Richiedi la tua CIE"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTouchEnd={[Function]}
          testID="id-activation-request-cie"
        >
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "marginHorizontal": -24,
                  "paddingHorizontal": 24,
                  "paddingVertical": 12,
                },
                {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                  {
                    "columnGap": 18,
                  },
                  {
                    "transform": [
                      {
                        "scale": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                accessibilityLabel=""
                accessible={false}
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                color="#0B3EE3"
                focusable={false}
                height={36}
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M18.5855 18.458C17.0895 19.3667 15.3387 19.8894 13.46 19.8894C7.97044 19.8894 3.51498 15.4213 3.51498 9.94468C3.51498 4.45532 7.97044 0 13.4472 0C16.8534 0 19.8577 1.72055 21.6503 4.32706L21.9491 4.67563L17.9748 8.08194L17.7289 7.79506L17.7239 7.8C17.7047 7.77353 17.6852 7.74723 17.6655 7.72109L17.4763 7.50035L17.4846 7.49319C16.4164 6.2133 14.8146 5.4 13.0259 5.4C9.82156 5.4 7.20446 8.00426 7.20446 11.2213H6.34911C6.34911 7.54468 9.34921 4.54468 13.0259 4.54468C15.0687 4.54468 16.9055 5.47165 18.1353 6.93552L20.8254 4.62985C19.1728 2.33792 16.4768 0.842553 13.4472 0.842553C8.43003 0.842553 4.35756 4.91489 4.35756 9.93192C4.35756 14.9489 8.43003 19.0213 13.4472 19.0213C15.2037 19.0213 16.8522 18.5179 18.242 17.6506L18.6227 17.3243L21.5772 20.7718C21.5779 20.7713 21.5787 20.7707 21.5794 20.7702L22.1922 21.383C19.9708 23.0298 17.2133 24 14.2387 24C7.58745 24 2.05961 19.1362 1 12.7787H1.86811C2.91496 18.6638 8.0598 23.1447 14.2387 23.1447C16.6948 23.1447 18.9961 22.4328 20.9386 21.2037L18.5855 18.458Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <View
                style={
                  {
                    "flexGrow": 1,
                    "flexShrink": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.5}
                  style={
                    [
                      {},
                      {
                        "color": "#0B3EE3",
                        "fontFamily": "Titillio",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                    ]
                  }
                >
                  Richiedi la tua CIE
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Attiva le credenziali CIE"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTouchEnd={[Function]}
          testID="id-activation-activate-cie"
        >
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "marginHorizontal": -24,
                  "paddingHorizontal": 24,
                  "paddingVertical": 12,
                },
                {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                  {
                    "columnGap": 18,
                  },
                  {
                    "transform": [
                      {
                        "scale": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                accessibilityLabel=""
                accessible={false}
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                color="#0B3EE3"
                focusable={false}
                height={36}
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGPath
                    d="m7.172 3.422-.149.05c3.004.54 5.428 1.965 7.155 4.398 1.721 2.426 2.277 5.111 1.643 7.988-.635 2.884-2.313 5.09-4.89 6.683l.025.008c.014.005.026.01.038.012l.478.102c.353.075.705.15 1.06.221.525.106 1.05.222 1.574.337.94.208 1.88.415 2.832.564.177.027.355.058.532.088.223.039.446.077.67.11.315.046.625 0 .909-.139.613-.302.907-.806.954-1.454a3.204 3.204 0 0 0-.122-1.092 3.614 3.614 0 0 1-.128-.598c-.036-.369.095-.696.333-.983.055-.066.112-.132.169-.197.067-.077.134-.154.198-.233.136-.167.235-.349.191-.572a3.417 3.417 0 0 0-.066-.259l-.001-.003a.588.588 0 0 1 .099-.549l.08-.108c.03-.044.062-.088.096-.13.224-.282.257-.585.12-.91a14.456 14.456 0 0 0-.084-.19c-.047-.107-.094-.214-.137-.323a.738.738 0 0 1 .126-.79c.189-.228.43-.389.694-.525.333-.174.657-.36.94-.605.243-.213.466-.442.61-.731a.935.935 0 0 0 .107-.495 1.493 1.493 0 0 0-.172-.548 8.247 8.247 0 0 0-.878-1.34 502.716 502.716 0 0 0-1.904-2.433 3.126 3.126 0 0 1-.648-1.57 14.29 14.29 0 0 1-.086-.858 5.584 5.584 0 0 1-.005-.65c.008-.153.022-.305.036-.457.013-.14.026-.279.034-.418a4.754 4.754 0 0 0-.282-1.978c-.19-.501-.394-.998-.598-1.495a146.1 146.1 0 0 1-.23-.561 1.426 1.426 0 0 0-.433-.61c-.207-.163-.435-.228-.699-.14l-6.891 2.287-2.655.881-.645.215ZM.582 11.859c.388.58 1.127.87 2.215.87.668 0 1.375-.078 2.122-.231l-.032-.964c-.668.105-1.328.157-1.981.157s-1.092-.187-1.317-.56c-.225-.374-.337-1.076-.337-2.106 0-1.03.116-1.732.348-2.105.232-.374.675-.56 1.328-.56s1.306.055 1.959.167l.043-.943a9.8 9.8 0 0 0-2.133-.262c-1.081 0-1.817.281-2.21.843C.197 6.728 0 7.672 0 9c0 1.327.194 2.28.582 2.86ZM5.866 12.613h1.187V7.375H5.866v5.238ZM5.866 6.485h1.187V5.28H5.866v1.205Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    clipRule={0}
                    d="m12.461 11.639-.304.031a20.61 20.61 0 0 1-1.59.063c-.515 0-.866-.101-1.055-.304-.189-.202-.287-.52-.294-.953h3.374l.076-.817c0-1.6-.761-2.4-2.285-2.4-1.575 0-2.362.93-2.362 2.787 0 .936.176 1.617.528 2.043.352.426.93.64 1.736.64.638 0 1.371-.081 2.198-.242l-.022-.848Zm-1.213-3.127c.17.206.256.567.256 1.084H9.207c.007-.496.104-.852.289-1.068.185-.217.48-.325.887-.325.406 0 .694.103.865.309Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                  <RNSVGPath
                    d="M4.654 21.179h1.208v-7.176H4.654v7.176Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    propList={
                      [
                        "fill",
                      ]
                    }
                  />
                  <RNSVGPath
                    clipRule={0}
                    d="M7.113 21.179h2.58c1.197 0 2.002-.339 2.416-1.016.21-.343.357-.725.44-1.147.084-.423.126-.938.126-1.545 0-1.195-.21-2.071-.632-2.63-.42-.558-1.204-.838-2.35-.838h-2.58v7.176Zm3.973-5.584c.225.384.337 1.01.337 1.876 0 .433-.02.796-.06 1.089-.04.293-.118.57-.233.828-.24.51-.719.764-1.437.764H8.322V15.02h1.37c.704 0 1.169.192 1.394.576Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <View
                style={
                  {
                    "flexGrow": 1,
                    "flexShrink": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.5}
                  style={
                    [
                      {},
                      {
                        "color": "#0B3EE3",
                        "fontFamily": "Titillio",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                    ]
                  }
                >
                  Attiva le credenziali CIE
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Attiva SPID"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTouchEnd={[Function]}
          testID="id-activation-activate-spid"
        >
          <View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "marginHorizontal": -24,
                  "paddingHorizontal": 24,
                  "paddingVertical": 12,
                },
                {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                  {
                    "columnGap": 18,
                  },
                  {
                    "transform": [
                      {
                        "scale": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <RNSVGSvgView
                accessibilityElementsHidden={true}
                accessibilityLabel=""
                accessible={false}
                align="xMidYMid"
                bbHeight={36}
                bbWidth={36}
                color="#0B3EE3"
                focusable={false}
                height={36}
                importantForAccessibility="no-hide-descendants"
                meetOrSlice={0}
                minX={0}
                minY={0}
                style={
                  [
                    {
                      "backgroundColor": "transparent",
                      "borderWidth": 0,
                    },
                    {
                      "flex": 0,
                      "height": 36,
                      "width": 36,
                    },
                  ]
                }
                vbHeight={24}
                vbWidth={24}
                width={36}
              >
                <RNSVGGroup
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                >
                  <RNSVGPath
                    clipRule={0}
                    d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
                    fill={
                      {
                        "type": 2,
                      }
                    }
                    fillRule={0}
                    propList={
                      [
                        "fill",
                        "fillRule",
                      ]
                    }
                  />
                </RNSVGGroup>
              </RNSVGSvgView>
              <View
                style={
                  {
                    "flexGrow": 1,
                    "flexShrink": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.5}
                  style={
                    [
                      {},
                      {
                        "color": "#0B3EE3",
                        "fontFamily": "Titillio",
                        "fontSize": 16,
                        "fontStyle": "normal",
                        "fontWeight": "600",
                        "lineHeight": 20,
                      },
                    ]
                  }
                >
                  Attiva SPID
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "bottom": 0,
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": "100%",
        },
        {
          "height": NaN,
          "paddingBottom": undefined,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          false,
        ]
      }
    >
      <View
        style={
          [
            {
              "opacity": undefined,
            },
            false,
          ]
        }
      >
        <BVLinearGradient
          colors={
            [
              16777215,
              218103807,
              419430399,
              620756991,
              822083583,
              1040187391,
              1241513983,
              1442840575,
              1644167167,
              1845493759,
              2046820351,
              2264924159,
              2466250751,
              2667577343,
              2868903935,
              3070230527,
              3271557119,
              3489660927,
              3690987519,
              3892314111,
              4093640703,
              4294967295,
            ]
          }
          endPoint={
            {
              "x": 0.5,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.047619047619047616,
              0.09523809523809523,
              0.14285714285714285,
              0.19047619047619047,
              0.23809523809523808,
              0.2857142857142857,
              0.3333333333333333,
              0.38095238095238093,
              0.42857142857142855,
              0.47619047619047616,
              0.5238095238095237,
              0.5714285714285714,
              0.6190476190476191,
              0.6666666666666666,
              0.7142857142857142,
              0.7619047619047619,
              0.8095238095238095,
              0.8571428571428571,
              0.9047619047619047,
              0.9523809523809523,
              1,
            ]
          }
          startPoint={
            {
              "x": 0.5,
              "y": 0,
            }
          }
          style={
            {
              "height": NaN,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "bottom": 0,
            "height": NaN,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        {
          "flexShrink": 0,
          "paddingHorizontal": 24,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Chiudi"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "stretch",
            "flexShrink": 0,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderCurve": "continuous",
                "elevation": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "overflow": "hidden",
                "textAlignVertical": "center",
              },
              false,
              {
                "backgroundColor": undefined,
              },
              {
                "paddingHorizontal": 16,
              },
              {
                "backgroundColor": "#0B3EE3",
                "borderColor": "#FFFFFF",
                "borderRadius": 8,
                "borderWidth": 0,
                "height": 48,
              },
              {},
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "columnGap": 8,
                },
                false,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              accessible={false}
              allowFontScaling={true}
              ellipsizeMode="tail"
              importantForAccessibility="no-hide-descendants"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": undefined,
                  },
                  [
                    {
                      "textAlign": "auto",
                    },
                    {
                      "color": "#FFFFFF",
                    },
                    {
                      "color": undefined,
                    },
                  ],
                ]
              }
            >
              Chiudi
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`SpidWizard Should match the snapshot 1`] = `
[
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      [
        {
          "paddingBottom": NaN,
          "paddingHorizontal": 0,
        },
        {},
      ]
    }
    decelerationRate="normal"
    onScroll={[Function]}
    scrollEventThrottle={8}
    snapToEnd={false}
    snapToOffsets={
      [
        0,
        0,
      ]
    }
  >
    <View>
      <View
        onLayout={[Function]}
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "gap": 8,
            }
          }
        >
          <Text
            accessibilityLabel="Hai SPID?"
            accessibilityRole="header"
            allowFontScaling={true}
            dynamicTypeRamp="title1"
            maxFontSizeMultiplier={1.5}
            style={
              [
                {},
                {
                  "color": "#0E0F13",
                  "fontFamily": "Titillio",
                  "fontSize": 26,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "lineHeight": 34,
                },
              ]
            }
          >
            Hai SPID?
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "paddingHorizontal": 24,
          }
        }
      >
        <View
          style={
            {
              "height": 16,
            }
          }
        />
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="body"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#555C70",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "lineHeight": 24,
              },
            ]
          }
        >
          Se hai SPID, entra su IO inserendo le tue credenziali, usando il tuo volto o l’impronta, oppure tramite l’app del tuo fornitore di SPID.
        </Text>
      </View>
    </View>
  </RCTScrollView>,
  <View
    pointerEvents="box-none"
    style={
      [
        {
          "bottom": 0,
          "justifyContent": "flex-end",
          "position": "absolute",
          "width": "100%",
        },
        {
          "height": NaN,
          "paddingBottom": undefined,
        },
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          false,
        ]
      }
    >
      <View
        style={
          [
            {
              "opacity": undefined,
            },
            false,
          ]
        }
      >
        <BVLinearGradient
          colors={
            [
              16777215,
              218103807,
              419430399,
              620756991,
              822083583,
              1040187391,
              1241513983,
              1442840575,
              1644167167,
              1845493759,
              2046820351,
              2264924159,
              2466250751,
              2667577343,
              2868903935,
              3070230527,
              3271557119,
              3489660927,
              3690987519,
              3892314111,
              4093640703,
              4294967295,
            ]
          }
          endPoint={
            {
              "x": 0.5,
              "y": 1,
            }
          }
          locations={
            [
              0,
              0.047619047619047616,
              0.09523809523809523,
              0.14285714285714285,
              0.19047619047619047,
              0.23809523809523808,
              0.2857142857142857,
              0.3333333333333333,
              0.38095238095238093,
              0.42857142857142855,
              0.47619047619047616,
              0.5238095238095237,
              0.5714285714285714,
              0.6190476190476191,
              0.6666666666666666,
              0.7142857142857142,
              0.7619047619047619,
              0.8095238095238095,
              0.8571428571428571,
              0.9047619047619047,
              0.9523809523809523,
              1,
            ]
          }
          startPoint={
            {
              "x": 0.5,
              "y": 0,
            }
          }
          style={
            {
              "height": NaN,
            }
          }
        />
      </View>
      <View
        style={
          {
            "backgroundColor": "#FFFFFF",
            "bottom": 0,
            "height": NaN,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        {
          "flexShrink": 0,
          "paddingHorizontal": 24,
          "width": "100%",
        }
      }
    >
      <View
        accessibilityLabel="Sì, entra con SPID"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "stretch",
            "flexShrink": 0,
          }
        }
        testID="spid-wizard-navigate-to-idp-selection"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderCurve": "continuous",
                "elevation": 0,
                "flexDirection": "row",
                "justifyContent": "center",
                "overflow": "hidden",
                "textAlignVertical": "center",
              },
              false,
              {
                "backgroundColor": undefined,
              },
              {
                "paddingHorizontal": 16,
              },
              {
                "backgroundColor": "#0B3EE3",
                "borderColor": "#FFFFFF",
                "borderRadius": 8,
                "borderWidth": 0,
                "height": 48,
              },
              {},
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "columnGap": 8,
                },
                false,
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              accessible={false}
              allowFontScaling={true}
              ellipsizeMode="tail"
              importantForAccessibility="no-hide-descendants"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#0E0F13",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": undefined,
                  },
                  [
                    {
                      "textAlign": "auto",
                    },
                    {
                      "color": "#FFFFFF",
                    },
                    {
                      "color": undefined,
                    },
                  ],
                ]
              }
            >
              Sì, entra con SPID
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignSelf": "center",
            "marginBottom": 8,
          }
        }
      >
        <View
          style={
            {
              "height": 16,
            }
          }
        />
        <View
          accessibilityLabel="Non ho SPID"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={
            {
              "bottom": 14,
              "left": 24,
              "right": 24,
              "top": 14,
            }
          }
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-start",
            }
          }
          testID="spid-wizard-navigate-to-id-activation-wizard"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderCurve": "continuous",
                  "elevation": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "textAlignVertical": "center",
                },
                false,
                {},
                {
                  "paddingHorizontal": 0,
                },
                {
                  "backgroundColor": "transparent",
                  "borderColor": "#0B3EE3",
                  "borderRadius": 8,
                  "borderWidth": 0,
                  "height": undefined,
                },
                {},
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "columnGap": 8,
                  },
                  false,
                ]
              }
            >
              <Text
                accessibilityElementsHidden={true}
                accessible={false}
                allowFontScaling={true}
                ellipsizeMode="tail"
                importantForAccessibility="no-hide-descendants"
                maxFontSizeMultiplier={1.5}
                numberOfLines={1}
                style={
                  [
                    {},
                    {
                      "color": "#0E0F13",
                      "fontFamily": "Titillio",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "fontWeight": "600",
                      "lineHeight": 20,
                    },
                    [
                      {
                        "textAlign": "auto",
                      },
                      {
                        "color": "#0B3EE3",
                      },
                      {
                        "color": undefined,
                      },
                    ],
                  ]
                }
              >
                Non ho SPID
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;
